# obsura-deploy

./: .editorconfig  .gitignore  DEPENDENCY_LICENSE_INVENTORY.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release-dev.yml  release-main.yml
cli/: obsuractl_entry.py
cli/obsuractl/: config.py  helpers.py  main.py  ui.py
cli/obsuractl/commands/: backup.py  doctor.py  down.py  init.py  logs.py  restart.py  restore.py  rollback.py  status.py  up.py  update.py
compose/examples/: docker-compose.single-node.yaml
compose/local/: docker-compose.yaml
compose/production/: docker-compose.yaml
docs/: backups.md  cli.md  configuration.md  local.md  overview.md  production.md  releases.md  rollback.md  security.md  upgrades.md
env/: api.env.example  global.env.example  postgres.env.example
man/: obsuractl.1
ops/: notes.md
proxy/caddy/: Caddyfile.example
proxy/nginx/: nginx.conf.example
scripts/: backup.ps1  backup.sh  build_obsuractl_binary.py  common.ps1  common.sh  deploy.ps1  deploy.sh  read_obsuractl_version.py  restore.ps1  restore.sh  rollback.ps1  rollback.sh  update.ps1  update.sh  write_checksums.py
tests/: test_build_assets.py  test_cli.py  test_cli_help.py  test_compose_images.py  test_init.py  test_repo_discovery.py  test_version.py
